# wiw-py

./: .gitignore  MANIFEST.in  README.md  debug.sh  setup.cfg
src/wiw-py/: appdata.py  wheniwork.py
src/wiw-py/package_data/: .LICENSE  credentials
