[metadata]
name = wiw-py
version = 0.0.1
author = jackinthebox52
author_email = jackmassey2000@gmail.com
description = A python module for interacting with the 'When I Work' undocumented API
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB REPOSITORY LINK
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix (+MacOS) / Windows
[options]
package_dir =
    = src
python_requires = >=3.7
include_package_data = True